--- a/Experimenting/FUCKHEADS/index.html
+++ b/Experimenting/FUCKHEADS/index.html
@@ -21,8 +21,8 @@
         <!-- --------------------------main--------------------------- -->
         <Main>
             <!-- -----------about----------------- -->
-            <section class="about container">
-                <div class="about-text">
+            <section class="block container">
+                <div class="text-block">
                     <h2>ABOUT US</h2>
                     <p>Viral yr fixie marfa fingerstache, actually mixtape lumbersexual microdosing artisan cold-pressed master cleanse blue bottle pork belly +1. Post-ironic distillery butt bread put a bird on it, hammock affogato hashtag succulents squid wolf. Mustache echo park microdosing, craft beer raclette thundercats master cleanse edison bulb twee la croix hella post-ironic migas. Chia kickstarter tacos offal. Ennui pitchfork chillwave flannel irony. Adaptogen crucifix hella intelligentsia, banh mi tumeric put a bird on it farm-to-table vinyl mlkshk. Shaman gluten-free squid pug, kitsch narwhal +1 hoodie hexagon adaptogen kickstarter.
 
@@ -47,6 +47,36 @@
                     <img src="images/7.jpg" alt="Tristen" class="gallery-img" id="img-4">
                 </div>
             </section>
+            
+            <!-- -----------idk maybe contact?----------------- -->
+            <section class="block contact container">
+                <div class="text-block">
+                    <h2>CONTACT US</h2>
+                    <p>Viral yr fixie marfa fingerstache, actually mixtape lumbersexual microdosing artisan cold-pressed master cleanse blue bottle pork belly +1. Post-ironic distillery butt bread put a bird on it, hammock affogato hashtag succulents squid wolf. Mustache echo park microdosing, craft beer raclette thundercats master cleanse edison bulb twee la croix hella post-ironic migas. Chia kickstarter tacos offal. Ennui pitchfork chillwave flannel irony. Adaptogen crucifix hella intelligentsia, banh mi tumeric put a bird on it farm-to-table vinyl mlkshk. Shaman gluten-free squid pug, kitsch narwhal +1 hoodie hexagon adaptogen kickstarter.
+
+                    Offal poutine hexagon blog 8-bit williamsburg stumptown pickled fanny pack next level listicle. Kinfolk deep v everyday carry ethical celiac hoodie semiotics try-hard. Fingerstache tattooed truffaut health goth viral taiyaki vape heirloom chambray. Gochujang poke XOXO, try-hard single-origin coffee church-key four loko etsy. Kale chips shabby chic trust fund bitters locavore cliche sriracha meggings.</p>
+                </div>
+                <div class="contact-img">
+                    <img src="images/4.jpg" alt="Us" class="person">
+                </div>
+            </section>
+
+            <section class="images">
+                <div class="images-item">
+                    <img src="images/10.jpg" alt="Lowg" class="gallery-img" id="img-5">
+                </div>
+                <div class="images-item">
+                    <img src="images/5.jpg" alt="blurry building" class="gallery-img" id="img-6">
+                </div>
+                <div class="images-item">
+                    <img src="images/6.jpg" alt="Hall" class="gallery-img" id="img-7">
+                </div>
+                <div class="images-item">
+                    <img src="images/7.jpg" alt="Tristen" class="gallery-img" id="img-8">
+                </div>
+            </section>
+
+
         </Main>
     </div>
 </body>
