--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -20,10 +20,11 @@
                 <img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo">
             </div>
             <div class="nav">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a id="current-page" href="about.html">ABOUT</a></li>
+                <ul id="nav-links">
+                    <!-- reversed order because of flex direction -->
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a id="current-page" href="about.html">ABOUT</a></li>
+                    <li><a href="index.html">HOME</a></li>
                 </ul>
             </div>
         </section>
