--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -36,11 +36,13 @@
         <!-- landing image with rotating text -->
         <section class="landing-area">
             <img src="images/on-grid-audio-circle.svg" alt="On grid audio text rotating" class="rotate">
-            <section class="landing-background">
-                <img id="landing-layer-1 " class="size landing-img" src="images/adi-header.png" alt="picture of the owner">
-                <img id="landing-layer-2 " class="size landing-img" src="images/adi-header.png" alt="picture of the owner">
-                <img id="landing-layer-3 " class="size landing-img" src="images/adi-header.png" alt="picture of the owner">
+            <section class="landing-img">
+                <img id="landing-layer-1" class="size" src="images/adi-header.png" alt="picture of the owner">
+                <img id="landing-layer-2" class="size" src="images/adi-header.png" alt="picture of the owner">
+                <img id="landing-layer-3" class="size" src="images/adi-header.png" alt="picture of the owner">
             </section>
+
+
         </section>
         
         <!-- BARCODE GIBBERISH -->
@@ -51,9 +53,9 @@
         <!-- body section -->
         <section class="section-1">
             <div class="section-1-background">
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-1">
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-2">
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-3">
+                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-1 section-size">
+                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-2 section-size">
+                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-3 section-size">
             </div>
             <div class="container">
                 <div class="header">
