--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -70,9 +70,9 @@
 
         <section class="section-2">
             <div class="section-2-background">
-                <img src="images/bus.jpg" alt="bus" class="section-2-img-1">
-                <img src="images/bus.jpg" alt="bus" class="section-2-img-2">
-                <img src="images/bus.jpg" alt="bus" class="section-2-img-3">
+                <img src="images/bus.jpg" alt="bus" class="section-2-img-1 section-size">
+                <img src="images/bus.jpg" alt="bus" class="section-2-img-2 section-size">
+                <img src="images/bus.jpg" alt="bus" class="section-2-img-3 section-size">
             </div>
             <div class="container">
                 <div class="header">
@@ -90,9 +90,9 @@
 
         <section class="section-3">
             <div class="section-3-background">
-                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-1">
-                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-2">
-                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-3">
+                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-1 section-size">
+                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-2 section-size">
+                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-3 section-size">
             </div>
             <div class="container">
                 <div class="header">
