about page and footer

--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -32,24 +32,26 @@
 
 <!-- --------------------------------BODY---------------------------------- -->
     <main>
-        <section class="landing-img">
+        <section class="landing-area secondary-landing">
             <img src="images/bus.jpg" alt="bus" class="landing">
         </section>
 
         <!-- BARCODE GIBBERISH -->
-        <div class="barcode">
-            <p>abcdefgahcbdgehabcghdooacghdemcabghdtacgdheabcdefgahcbdgehabcghdooacghdemcabghdtacgdhe</p>
+        <div class="barcode-box">
+            <p class="barcode">abcdefgahcbdgehabcghdooacghdemcabghdtacgdheabcdefgahcbdgehabcghdooacghdemcabghdtacgdhe</p>
         </div>
 
-        <section class="body">
+        <section class="body container about">
             <div class="header">
                 <h1>We are a collective of like minded individuals trying to make a change in the music industry</h1>
             </div>
 
             <div class="body-text">
-                <p>Skate ipsum dolor sit amet, Vatoland rails stalefish rocket air kick-nose invert. Lipslide Slimeballs slappy flail soul skate berm. Lien air g-turn tic-tac grab backside. Stoked flail nose slide full-cab Fiesta Mall slap maxwell. Hospital flip Japan air noseblunt slide deck grab. Airwalk sick egg plant pressure flip deck. Transfer kick-nose 900 layback g-turn. Nollie airwalk flail slob air masonite. Nosepicker feeble flail drop in helipop. Mute-air hang-up wall ride blunt body varial. Kingpin Jeremy Klein hard flip rad pop shove-it hip. Air nosebone tuna-flip varial wax. Griptape sick 180 helipop shoveit. 
-
-                Layback soul skate sponsored snake Primo slide opposite footed chicken wing. Tail 900 720 mongo sick wall ride nose slide. Nose bump kickflip fakie varial fakie out invert noseblunt slide. Indy grab tail slob air launch ramp frigid air berm hang-up. Regular footed Hugh Bod Boyle locals baseplate launch ramp disaster skater method air. 
+                <p>
+                    Skate ipsum dolor sit amet, Vatoland rails stalefish rocket air kick-nose invert. Lipslide Slimeballs slappy flail soul skate berm. Lien air g-turn tic-tac grab backside. Stoked flail nose slide full-cab Fiesta Mall slap maxwell. Hospital flip Japan air noseblunt slide deck grab. Airwalk sick egg plant pressure flip deck. Transfer kick-nose 900 layback g-turn. Nollie airwalk flail slob air masonite. Nosepicker feeble flail drop in helipop. Mute-air hang-up wall ride blunt body varial. Kingpin Jeremy Klein hard flip rad pop shove-it hip. Air nosebone tuna-flip varial wax. Griptape sick 180 helipop shoveit. 
+                </p>
+                <p>
+                    Layback soul skate sponsored snake Primo slide opposite footed chicken wing. Tail 900 720 mongo sick wall ride nose slide. Nose bump kickflip fakie varial fakie out invert noseblunt slide. Indy grab tail slob air launch ramp frigid air berm hang-up. Regular footed Hugh Bod Boyle locals baseplate launch ramp disaster skater method air. 
                 </p>
             </div>
         </section>
@@ -57,10 +59,10 @@
 
     <!-- ----------------------------FOOTER-------------------------------------- -->
     <footer>
-        <ul>
-            <li"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact">Contact</a></li>
+        <ul class="container footer">
+            <li"><a href="index.html" class="footer-link">Home</a></li>
+            <li><a href="about.html" class="footer-link">About</a></li>
+            <li><a href="contact" class="footer-link">Contact</a></li>
             <li><p>© On Grid Audio</p></li>
         </ul>
     </footer>
