--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -57,7 +57,7 @@
                 <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-2 section-size">
                 <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-3 section-size">
             </div>
-            <div class="container">
+            <div class="container body">
                 <div class="header">
                     <h1>On Grid Audio is an up and coming mobile music production studio</h1>
                 </div>
@@ -74,7 +74,7 @@
                 <img src="images/bus.jpg" alt="bus" class="section-2-img-2 section-size">
                 <img src="images/bus.jpg" alt="bus" class="section-2-img-3 section-size">
             </div>
-            <div class="container">
+            <div class="container body">
                 <div class="header">
                     <h1>Self Sufficient
 
@@ -94,7 +94,7 @@
                 <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-2 section-size">
                 <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-3 section-size">
             </div>
-            <div class="container">
+            <div class="container body">
                 <div class="header">
                     <h1>We would love to hear from you!</h1>
                 </div>
@@ -110,11 +110,11 @@
     </main>
 
     <!-- ----------------------------FOOTER-------------------------------------- -->
-    <footer class="container">
-        <ul>
-            <li"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact">Contact</a></li>
+    <footer >
+        <ul class="container footer">
+            <li"><a href="index.html" class="footer-link">Home</a></li>
+            <li><a href="about.html" class="footer-link">About</a></li>
+            <li><a href="contact" class="footer-link">Contact</a></li>
             <li><p>© On Grid Audio</p></li>
         </ul>
     </footer>
