--- a/MTM6201/midterm/contact.html
+++ b/MTM6201/midterm/contact.html
@@ -32,13 +32,13 @@
 
 <!-- --------------------------------BODY---------------------------------- -->
     <main>
-        <section class="landing-img">
+        <section class="landing-area secondary-landing">
             <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="landing">
         </section>
 
         <!-- BARCODE GIBBERISH -->
-        <div class="barcode">
-            <p>abcdefgahcbdgehabcghdooacghdemcabghdtacgdheabcdefgahcbdgehabcghdooacghdemcabghdtacgdhe</p>
+        <div class="barcode-box">
+            <p class="barcode">abcdefgahcbdgehabcghdooacghdemcabghdtacgdheabcdefgahcbdgehabcghdooacghdemcabghdtacgdhe</p>
         </div>
 
         <section class="body">
@@ -71,10 +71,10 @@
 
     <!-- ----------------------------FOOTER-------------------------------------- -->
     <footer>
-        <ul>
-            <li"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact">Contact</a></li>
+        <ul class="container footer">
+            <li"><a href="index.html" class="footer-link">Home</a></li>
+            <li><a href="about.html" class="footer-link">About</a></li>
+            <li><a href="contact" class="footer-link">Contact</a></li>
             <li><p>© On Grid Audio</p></li>
         </ul>
     </footer>
