finally understand css grid lool

--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -14,21 +14,17 @@
     
 <!-- ----------------------HEADER------------------------------------ -->
 
-    <header>
-        <nav class="navbar container">
-            <div class="logo">
-                <img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo">
-            </div>
-            <div class="nav">
-                <ul id="nav-links">
-                    <!-- reversed order because of flex direction -->
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a id="current-page" href="index.html">HOME</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+<header>
+    <section class="navbar container">
+            <ul id="nav">
+                <li  id="logo"><img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo"></li>
+                <li id="nav-item-1" class="current-page"><a href="index.html">HOME</a></li>
+                <li id="nav-item-2"><a href="about.html">ABOUT</a></li>
+                <li id="nav-item-3"><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </div>
+    </section>
+</header>
 
 <!-- ---------------------------main----------------------------------------------- -->
 
