--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -16,15 +16,11 @@
 
     <header>
         <section class="navbar container">
-            <div class="logo">
-                <img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo">
-            </div>
-            <div class="nav">
-                <ul id="nav-links">
-                    <!-- reversed order because of flex direction -->
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><a id="current-page" href="about.html">ABOUT</a></li>
-                    <li><a href="index.html">HOME</a></li>
+                <ul id="nav">
+                    <li  id="logo"><img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo"></li>
+                    <li id="nav-item-1"><a href="index.html">HOME</a></li>
+                    <li id="nav-item-2" class="current-page"><a href="about.html">ABOUT</a></li>
+                    <li id="nav-item-3"><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </section>
