contact section work

--- a/MTM6201/midterm/contact.html
+++ b/MTM6201/midterm/contact.html
@@ -51,7 +51,7 @@
 
                         <input id="email" placeholder="Email address" type="email" required>
 
-                        <textarea id="Message">Message </textarea> 
+                        <textarea id="Message" placeholder="Message"></textarea> 
     
                         <input class="button" type="submit" value="Submit">
                     </fieldset>
