contact form finished for now

--- a/MTM6201/midterm/contact.html
+++ b/MTM6201/midterm/contact.html
@@ -46,7 +46,7 @@
         <!-- ------------------------------contact form----------------------------------------- -->
             <div class="contact-form">
                 <form action="#" method="post">
-                    <fieldset>
+                    <fieldset class="inputs">
                         <input id="name" placeholder="Name" type="text" required>
 
                         <input id="email" placeholder="Email address" type="email" required>
