--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -17,7 +17,7 @@
     <header>
         <section class="navbar container">
                 <ul id="nav">
-                    <li  id="logo"><img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo"></li>
+                    <li  id="logo"><img id="logo-adjust" src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo"></li>
                     <li id="nav-item-1"><a href="index.html">HOME</a></li>
                     <li id="nav-item-2" class="current-page"><a href="about.html">ABOUT</a></li>
                     <li id="nav-item-3"><a href="contact.html">CONTACT</a></li>
