--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -17,12 +17,11 @@
 <header>
     <section class="navbar container">
             <ul id="nav">
-                <li  id="logo"><img src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo"></li>
+                <li  id="logo"><img id="logo-adjust" src="images/on-grid-audio-logo.svg" alt="On Grid Audio Logo"></li>
                 <li id="nav-item-1" class="current-page"><a href="index.html">HOME</a></li>
                 <li id="nav-item-2"><a href="about.html">ABOUT</a></li>
                 <li id="nav-item-3"><a href="contact.html">CONTACT</a></li>
             </ul>
-        </div>
     </section>
 </header>
 
