image fitting completed

--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -48,17 +48,19 @@
         <!-- body section -->
         <section class="section-1">
             <div class="section-1-background">
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-1 section-size">
+                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-1 section-size">    
                 <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-2 section-size">
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-3 section-size">
-            </div>
-            <div class="container body">
-                <div class="header">
-                    <h1>On Grid Audio is an up and coming mobile music production studio</h1>
-                </div>
-                <div class="body-text">
-                    <p>Skate ipsum dolor sit amet, cab flip body varial ollie hole nosepicker hang up feeble mini ramp. Hip method air hang ten rocket air half-cab no comply layback. Ledge hang ten boned out kickflip frontside nose grab Eight Dayz nosepicker. Ledge crooked grind lipslide nose bump Jim Phillips bank chicken wing coffin. </p>
-                    <a href="about.html" class="button about-link">About Us</a>
+                <div class="section-text section-1-img-3">
+                    <img src="images/mpc.jpg" alt="someone using an mpc500" class=" section-size">
+                    <div class="container body landing-body">
+                        <div class="header">
+                            <h1>On Grid Audio is an up and coming mobile music production studio</h1>
+                        </div>
+                        <div class="body-text">
+                            <p>Skate ipsum dolor sit amet, cab flip body varial ollie hole nosepicker hang up feeble mini ramp. Hip method air hang ten rocket air half-cab no comply layback. Ledge hang ten boned out kickflip frontside nose grab Eight Dayz nosepicker. Ledge crooked grind lipslide nose bump Jim Phillips bank chicken wing coffin. </p>
+                            <a href="about.html" class="button about-link">About Us</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
