--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="body-text">
                             <p>Skate ipsum dolor sit amet, cab flip body varial ollie hole nosepicker hang up feeble mini ramp. Hip method air hang ten rocket air half-cab no comply layback. Ledge hang ten boned out kickflip frontside nose grab Eight Dayz nosepicker. Ledge crooked grind lipslide nose bump Jim Phillips bank chicken wing coffin. </p>
-                            <a href="about.html" class="button about-link">About Us</a>
+                            <a href="about.html" class="button">About Us</a>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="body-text">
                             <p>Skate ipsum dolor sit amet, cab flip body varial ollie hole nosepicker hang up feeble mini ramp. Hip method air hang ten rocket air half-cab no comply layback. Ledge hang ten boned out kickflip frontside nose grab Eight Dayz nosepicker. Ledge crooked grind lipslide nose bump Jim Phillips bank chicken wing coffin. </p>
-                            <a href="about.html" class="button contact-link">Contact Us</a>
+                            <a href="contact.html" class="button">Contact Us</a>
                         </div>
                     </div>
                 </div>
