--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -52,7 +52,7 @@
                 <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-2 section-size">
                 <div class="section-text section-1-img-3">
                     <img src="images/mpc.jpg" alt="someone using an mpc500" class=" section-size">
-                    <div class="container body landing-body">
+                    <div class="body landing-body">
                         <div class="header">
                             <h1>On Grid Audio is an up and coming mobile music production studio</h1>
                         </div>
@@ -71,13 +71,13 @@
                 <img src="images/bus.jpg" alt="bus" class="section-2-img-2 section-size">
                 <div class="section-text section-2-img-3">
                     <img src="images/bus.jpg" alt="bus" class="section-size">
-                    <div class="container body landing-body">
+                    <div class="body landing-body">
                         <div class="header">
-                            <h1>Self Sufficient
+                            <h1>Self Sufficient</h1>
         
-                                Solar Powered
+                            <h1>Solar Powered</h1>
                                 
-                                Stove Heated</h1>
+                            <h1>Stove Heated</h1>
                         </div>
                         <div class="body-text">
                             <p>Skate ipsum dolor sit amet, durometer transition coper alley oop switch 1080 Steve Chumney. Rails flypaper mini ramp kickturn hurricane crailtap. Grind poseur carve bluntslide locals Japan air. Cab flip slap maxwell lien air freestyle Stacy Peralta hard flip flail. Opposite footed egg plant bank frontside air casper wheels. Tailslide Kevin Harris rip grip pogo hand rail rad Danny Way. Hanger nose blunt shoveit tic-tac alley oop trucks. Rail slide finger flip impossible camel back full-cab face plant. Lien air tic-tac mongo Arto Saari smith grind bearings coping. </p>
@@ -94,7 +94,7 @@
                 <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-2 section-size">
                 <div class="section-text section-3-img-3">
                     <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-size">
-                    <div class="container body landing-body">
+                    <div class="body landing-body">
                         <div class="header">
                             <h1>We would love to hear from you!</h1>
                         </div>
