--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -58,7 +58,7 @@
         <ul class="container footer">
             <li"><a href="index.html" class="footer-link">Home</a></li>
             <li><a href="about.html" class="footer-link">About</a></li>
-            <li><a href="contact" class="footer-link">Contact</a></li>
+            <li><a href="contact.html" class="footer-link">Contact</a></li>
             <li><p>© On Grid Audio</p></li>
         </ul>
     </footer>
