the mystery of the 2px gap has been solved

--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -28,8 +28,10 @@
 
 <!-- --------------------------------BODY---------------------------------- -->
     <main>
-        <section class="landing-area secondary-landing">
-            <img src="images/bus.jpg" alt="bus" class="landing">
+        <section class="landing-area secondary-area">
+            <div class="landing-img secondary-img">
+                <img src="images/bus.jpg" alt="bus" class="secondary-size">
+            </div>
         </section>
 
         <!-- BARCODE GIBBERISH -->
