responsive done I think

--- a/MTM6201/midterm/about.html
+++ b/MTM6201/midterm/about.html
@@ -28,11 +28,11 @@
 
 <!-- --------------------------------BODY---------------------------------- -->
     <main>
-        <section class="landing-area secondary-area">
+        <div class="landing-area secondary-area">
             <div class="landing-img secondary-img">
                 <img src="images/bus.jpg" alt="bus" class="secondary-size">
             </div>
-        </section>
+        </div>
 
         <!-- BARCODE GIBBERISH -->
         <div class="barcode-box">
