--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -32,9 +32,42 @@
         <section class="landing-area">
             <img src="images/on-grid-audio-circle.svg" alt="On grid audio text rotating" class="rotate">
             <section class="landing-img">
-                <img id="landing-layer-1" class="size" src="images/adi-header.png" alt="picture of the owner">
-                <img id="landing-layer-2" class="size" src="images/adi-header.png" alt="picture of the owner">
-                <img id="landing-layer-3" class="size" src="images/adi-header.png" alt="picture of the owner">
+                <img id="landing-layer-1" class="size" 
+                    srcset=
+                        "images/adi-header-400.png 400w,
+                        images/adi-header-500.png 500w,
+                        images/adi-header-600.png 600w,
+                        images/adi-header-800.png 800w" 
+                    sizes=
+                        "(max-width: 400px) 400px,
+                        (max-width: 500px) 500px,
+                        (max-width: 600px) 600px,
+                        (max-width: 800px) 800px"
+                    alt="picture of the owner">
+                <img id="landing-layer-2" class="size" 
+                    srcset=
+                        "images/adi-header-400.png 400w,
+                        images/adi-header-500.png 500w,
+                        images/adi-header-600.png 600w,
+                        images/adi-header-800.png 800w" 
+                    sizes=
+                        "(max-width: 400px) 400px,
+                        (max-width: 500px) 500px,
+                        (max-width: 600px) 600px,
+                        (max-width: 800px) 800px"
+                    alt="picture of the owner">
+                <img id="landing-layer-3" class="size" 
+                    srcset=
+                        "images/adi-header-400.png 400w,
+                        images/adi-header-500.png 500w,
+                        images/adi-header-600.png 600w,
+                        images/adi-header-800.png 800w" 
+                    sizes=
+                        "(max-width: 400px) 400px,
+                        (max-width: 500px) 500px,
+                        (max-width: 600px) 600px,
+                        (max-width: 800px) 800px"
+                    alt="picture of the owner">
             </section>
 
 
@@ -48,10 +81,34 @@
         <!-- body section -->
         <section class="section-1">
             <div class="section-1-background">
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-1 section-size">    
-                <img src="images/mpc.jpg" alt="someone using an mpc500" class="section-1-img-2 section-size">
+                <img srcset=
+                    "images/mpc-1000.jpg 1000w,
+                    images/mpc-1280.jpg 1280w,
+                    images/mpc-1920.jpg 1920w" 
+                sizes=
+                    "(max-width: 1000px) 1000px,
+                    (max-width: 1280px) 1280px,
+                    (max-width: 1920px) 1920px"
+                alt="someone using an mpc500" class="section-1-img-1 section-size">    
+                <img srcset=
+                    "images/mpc-1000.jpg 1000w,
+                    images/mpc-1280.jpg 1280w,
+                    images/mpc-1920.jpg 1920w" 
+                sizes=
+                    "(max-width: 1000px) 1000px,
+                    (max-width: 1280px) 1280px,
+                    (max-width: 1920px) 1920px"
+                alt="someone using an mpc500" class="section-1-img-2 section-size">
                 <div class="section-text section-1-img-3">
-                    <img src="images/mpc.jpg" alt="someone using an mpc500" class=" section-size">
+                    <img srcset=
+                        "images/mpc-1000.jpg 1000w,
+                        images/mpc-1280.jpg 1280w,
+                        images/mpc-1920.jpg 1920w" 
+                    sizes=
+                        "(max-width: 1000px) 1000px,
+                        (max-width: 1280px) 1280px,
+                        (max-width: 1920px) 1920px"
+                    alt="someone using an mpc500" class=" section-size">
                     <div class="body landing-body">
                         <div class="header">
                             <h1>On Grid Audio is an up and coming mobile music production studio</h1>
@@ -67,10 +124,34 @@
 
         <section class="section-2">
             <div class="section-2-background">
-                <img src="images/bus.jpg" alt="bus" class="section-2-img-1 section-size">
-                <img src="images/bus.jpg" alt="bus" class="section-2-img-2 section-size">
+                <img srcset=
+                    "images/bus-1000.jpg 1000w,
+                    images/bus-1280.jpg 1280w,
+                    images/bus-1920.jpg 1920w" 
+                sizes=
+                    "(max-width: 1000px) 1000px,
+                    (max-width: 1280px) 1280px,
+                    (max-width: 1920px) 1920px"
+                alt="bus" class="section-2-img-1 section-size">
+                <img srcset=
+                    "images/bus-1000.jpg 1000w,
+                    images/bus-1280.jpg 1280w,
+                    images/bus-1920.jpg 1920w" 
+                sizes=
+                    "(max-width: 1000px) 1000px,
+                    (max-width: 1280px) 1280px,
+                    (max-width: 1920px) 1920px" 
+                alt="bus" class="section-2-img-2 section-size">
                 <div class="section-text section-2-img-3">
-                    <img src="images/bus.jpg" alt="bus" class="section-size">
+                    <img srcset=
+                        "images/bus-1000.jpg 1000w,
+                        images/bus-1280.jpg 1280w,
+                        images/bus-1920.jpg 1920w" 
+                    sizes=
+                        "(max-width: 1000px) 1000px,
+                        (max-width: 1280px) 1280px,
+                        (max-width: 1920px) 1920px"
+                    alt="bus" class="section-size">
                     <div class="body landing-body">
                         <div class="header">
                             <h1>Self Sufficient</h1>
@@ -90,10 +171,34 @@
 
         <section class="section-3">
             <div class="section-3-background">
-                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-1 section-size">
-                <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-3-img-2 section-size">
+                <img srcset=
+                    "images/blake-in-bus-1000.jpg 1000w,
+                    images/blake-in-bus-1280.jpg 1280w,
+                    images/blake-in-bus-1920.jpg 1920w" 
+                sizes=
+                    "(max-width: 1000px) 1000px,
+                    (max-width: 1280px) 1280px,
+                    (max-width: 1920px) 1920px" 
+                alt="blake in a bus" class="section-3-img-1 section-size">
+                <img srcset=
+                    "images/blake-in-bus-1000.jpg 1000w,
+                    images/blake-in-bus-1280.jpg 1280w,
+                    images/blake-in-bus-1920.jpg 1920w" 
+                sizes=
+                    "(max-width: 1000px) 1000px,
+                    (max-width: 1280px) 1280px,
+                    (max-width: 1920px) 1920px" 
+                alt="blake in a bus" class="section-3-img-2 section-size">
                 <div class="section-text section-3-img-3">
-                    <img src="images/blake-in-bus.jpg" alt="blake in a bus" class="section-size">
+                    <img srcset=
+                        "images/blake-in-bus-1000.jpg 1000w,
+                        images/blake-in-bus-1280.jpg 1280w,
+                        images/blake-in-bus-1920.jpg 1920w" 
+                    sizes=
+                        "(max-width: 1000px) 1000px,
+                        (max-width: 1280px) 1280px,
+                        (max-width: 1920px) 1920px"  
+                    alt="blake in a bus" class="section-size">
                     <div class="body landing-body">
                         <div class="header">
                             <h1>We would love to hear from you!</h1>
@@ -115,7 +220,7 @@
     <!-- ----------------------------FOOTER-------------------------------------- -->
     <footer >
         <ul class="container footer">
-            <li"><a href="index.html" class="footer-link">Home</a></li>
+            <li><a href="index.html" class="footer-link">Home</a></li>
             <li><a href="about.html" class="footer-link">About</a></li>
             <li><a href="contact" class="footer-link">Contact</a></li>
             <li><p>© On Grid Audio</p></li>
