validation and going over my documentation

--- a/MTM6201/midterm/contact.html
+++ b/MTM6201/midterm/contact.html
@@ -22,7 +22,6 @@
                 <li id="nav-item-2"><a href="about.html">ABOUT</a></li>
                 <li id="nav-item-3"  class="current-page"><a href="contact.html">CONTACT</a></li>
             </ul>
-        </div>
     </section>
 </header>
 
@@ -38,6 +37,7 @@
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
                     (max-width: 1920px) 1920px" 
+                src="images/blake-in-bus-1000.jpg:"
                 alt="bus" class="secondary-size">
             </div>
         </div>
@@ -74,7 +74,7 @@
     <!-- ----------------------------FOOTER-------------------------------------- -->
     <footer>
         <ul class="container footer">
-            <li"><a href="index.html" class="footer-link">Home</a></li>
+            <li><a href="index.html" class="footer-link">Home</a></li>
             <li><a href="about.html" class="footer-link">About</a></li>
             <li><a href="contact.html" class="footer-link">Contact</a></li>
             <li><p>© On Grid Audio</p></li>
