--- a/MTM6201/midterm/index.html
+++ b/MTM6201/midterm/index.html
@@ -43,6 +43,7 @@
                         (max-width: 500px) 500px,
                         (max-width: 600px) 600px,
                         (max-width: 800px) 800px"
+                    src="images/adi-header-400.png"
                     alt="picture of the owner">
                 <img id="landing-layer-2" class="size" 
                     srcset=
@@ -55,6 +56,7 @@
                         (max-width: 500px) 500px,
                         (max-width: 600px) 600px,
                         (max-width: 800px) 800px"
+                    src="images/adi-header-400.png"
                     alt="picture of the owner">
                 <img id="landing-layer-3" class="size" 
                     srcset=
@@ -67,6 +69,7 @@
                         (max-width: 500px) 500px,
                         (max-width: 600px) 600px,
                         (max-width: 800px) 800px"
+                    src="images/adi-header-400.png"
                     alt="picture of the owner">
             </section>
 
@@ -89,6 +92,7 @@
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
                     (max-width: 1920px) 1920px"
+                src="images/mpc-1000.jpg"
                 alt="someone using an mpc500" class="section-1-img-1 section-size">    
                 <img srcset=
                     "images/mpc-1000.jpg 1000w,
@@ -98,6 +102,7 @@
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
                     (max-width: 1920px) 1920px"
+                src="images/mpc-1000.jpg"
                 alt="someone using an mpc500" class="section-1-img-2 section-size">
                 <div class="section-text section-1-img-3">
                     <img srcset=
@@ -108,6 +113,7 @@
                         "(max-width: 1000px) 1000px,
                         (max-width: 1280px) 1280px,
                         (max-width: 1920px) 1920px"
+                    src="images/mpc-1000.jpg"
                     alt="someone using an mpc500" class=" section-size">
                     <div class="body landing-body">
                         <div class="header">
@@ -132,6 +138,7 @@
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
                     (max-width: 1920px) 1920px"
+                src="images/bus-1000.jpg"
                 alt="bus" class="section-2-img-1 section-size">
                 <img srcset=
                     "images/bus-1000.jpg 1000w,
@@ -141,6 +148,7 @@
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
                     (max-width: 1920px) 1920px" 
+                src="images/bus-1000.jpg"
                 alt="bus" class="section-2-img-2 section-size">
                 <div class="section-text section-2-img-3">
                     <img srcset=
@@ -151,6 +159,7 @@
                         "(max-width: 1000px) 1000px,
                         (max-width: 1280px) 1280px,
                         (max-width: 1920px) 1920px"
+                    src="images/bus-1000.jpg"
                     alt="bus" class="section-size">
                     <div class="body landing-body">
                         <div class="header">
@@ -178,7 +187,8 @@
                 sizes=
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
-                    (max-width: 1920px) 1920px" 
+                    (max-width: 1920px) 1920px"
+                src="images/blake-in-bus-1000.jpg"
                 alt="blake in a bus" class="section-3-img-1 section-size">
                 <img srcset=
                     "images/blake-in-bus-1000.jpg 1000w,
@@ -188,6 +198,7 @@
                     "(max-width: 1000px) 1000px,
                     (max-width: 1280px) 1280px,
                     (max-width: 1920px) 1920px" 
+                src="images/blake-in-bus-1000.jpg"
                 alt="blake in a bus" class="section-3-img-2 section-size">
                 <div class="section-text section-3-img-3">
                     <img srcset=
@@ -198,6 +209,7 @@
                         "(max-width: 1000px) 1000px,
                         (max-width: 1280px) 1280px,
                         (max-width: 1920px) 1920px"  
+                    src="images/blake-in-bus-1000.jpg"
                     alt="blake in a bus" class="section-size">
                     <div class="body landing-body">
                         <div class="header">
