finished works page and about page

--- a/MTM6201/portfolio/index.html
+++ b/MTM6201/portfolio/index.html
@@ -29,15 +29,15 @@
     <main>
 
         <div class="container main-content">
-            <img src="images/adi-ross.jpg" alt="Picture of Adison Rossiter">
+            <img src="images/adi-ross.jpg" alt="Picture of Adison Rossiter" class="animate__animated animate__fadeInLeft">
 
-            <div class="body-text">
+            <div class="body-text animate__animated animate__fadeInLeft animate__delay-1s">
                 <h1>Hello, I'm Adison Rossiter</h1>
                 <h2>I am a creative designer specializing in all areas of media design</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non porttitor risus. Curabitur imperdiet nulla in lacus placerat, nec condimentum sem viverra. Quisque dictum metus vel orci rhoncus, vitae porttitor purus elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Nullam lobortis sem nulla, eget bibendum arcu lacinia ut. Donec egestas purus quis rutrum suscipit. Nam nec augue finibus, lacinia nisi eget, viverra metus. Aliquam hendrerit sit amet arcu sed tempor. Aliquam erat volutpat. Nullam quis purus consectetur, iaculis est eu, molestie orci. Etiam volutpat sapien vel porta placerat.</p>
             </div>
 
-            <a href="about.html" class="button">learn more</a>
+            <a href="about.html" class="button animate__animated animate__fadeInLeft animate__delay-2s">learn more</a>
         </div>
 
     </main>
